--- a/Bot Control v4.4
+++ b/Bot Control v4.4
@@ -47,10 +47,6 @@ local cmdadmin = true
 local cmdunadmin = true
 local cmdarch = true
 local cmdorbit2 = true
-local cmdorbit3 = true
-local cmdorbit4 = true
-local cmdorbit5 = true
-local cmdorbit6 = true
 local cmdstalk = true
 local cmdunstalk = true
 local cmdcmds = true
@@ -87,7 +83,6 @@ local cmdsmite = true
 local cmdfreeze = true
 local cmdnoclip = true
 local cmdclip = true
-local cmdtest = true
 local cmdlevitate = true
 local cmdfloathead = true
 local cmdshuffle = true
@@ -96,17 +91,11 @@ local cmdhaunt = true
 local cmdunhaunt = true
 local cmdblackhole = true
 local cmdunblackhole = true
-local cmdnoodle = true
-local cmdunnoodle = true
 
 local towerbool = nil
 local followbool = nil
 local orbitbool = nil
 local orbitbool2 = nil
-local orbitbool3 = nil
-local orbitbool4 = nil
-local orbitbool5 = nil
-local orbitbool6 = nil
 local leftoffset = nil
 local rightoffset = nil
 local booljump = nil
@@ -133,7 +122,6 @@ local freezebool = nil
 local noclipping = nil
 local hauntbool = nil
 local blackholebool = nil
-local noodlebool - nil
 local Admins = {}
 
 --version of the script
@@ -180,11 +168,6 @@ if printcmd then
   print(";unsit                               | Bots stop sitting")
   print(";orbit [plr] <radius> <speed>        | Bots orbit a player (V1 - Basic)")
   print(";orbit2 [plr] <radius> <speed>       | Bots orbit a player (V2 - Enhanced)")
-  print(";orbit3 [plr] <radius> <speed>       | Bots orbit a player (V3)")
-  print(";orbit4 [plr] <radius> <speed>       | Bots orbit a player (V4)")
-  print(";orbit5 [plr] <radius> <speed>       | Bots orbit a player (V5)")
-  print(";orbit6 [plr] <radius> <speed>       | Bots orbit a player (V6 - Chaotic)")
-  print(";unorbit                             | Stop bots from orbiting")
   print(";quake [plr] <radius>                | Bots teleport randomly within a radius")
   print(";unquake                             | Bots unquake")
   print(";spin <number>                       | Bots start spinning")
@@ -336,10 +319,6 @@ towerbool = false
 followbool = false
 orbitbool = false
 orbitbool2 = false
-orbitbool3 = false
-orbitbool4 = false
-orbitbool5 = false
-orbitbool6 = false
 booljump = false
 wormbool = false
 boolspin = false
@@ -356,7 +335,6 @@ trampolinebool = false
 freezebool = false
 hauntbool = false
 blackholebool = false
-noodlebool = false
 end
 
 -- ;fix
@@ -366,10 +344,6 @@ towerbool = false
 followbool = false
 orbitbool = false
 orbitbool2 = false
-orbitbool3 = false
-orbitbool4 = false
-orbitbool5 = false
-orbitbool6 = false
 booljump = false
 wormbool = false
 boolspin = false
@@ -385,7 +359,6 @@ trampolinebool = false
 freezebool = false
 hauntbool = false
 blackholebool = false
-noodlebool = false
 game.Workspace.Gravity = 196.2
 player.Character:BreakJoints()
 end
@@ -1108,68 +1081,6 @@ local function shuffle()
           animation.AnimationId = "rbxassetid://429703734"
           local animationTrack = humanoid:LoadAnimation(animation)
           animationTrack:Play()
-      end
-  end
-end
-
--- ;test
-local function test()
-  local character = player.Character
-  if character then
-      -- Specific animation for head detachment
-      local humanoid = character:FindFirstChildOfClass("Humanoid")
-      if humanoid then
-          local animation = Instance.new("Animation")
-          animation.AnimationId = "rbxassetid://"
-          local animationTrack = humanoid:LoadAnimation(animation)
-          animationTrack:Play()
-      end
-  end
-end
-
--- ;bang
-local function bang(targetPlayer)
-  local character = player.Character
-  if character then
-      -- Specific animation for head detachment
-      local humanoid = character:FindFirstChildOfClass("Humanoid")
-      if humanoid then
-          local animation = Instance.new("Animation")
-          animation.AnimationId = "rbxassetid://148840371"
-          local animationTrack = humanoid:LoadAnimation(animation)
-          
-          -- Play animation
-          animationTrack:Play()
-
-          -- Add a bool to control the bang command
-          bangbool = true
-
-          -- Continuous positioning mechanism if a target player is specified
-          if targetPlayer then
-              local bangConnection
-              bangConnection = RunService.Heartbeat:Connect(function()
-                  -- Check if bang should continue
-                  if not bangbool or not player or not player.Character or not targetPlayer.Character then
-                      if bangConnection then
-                          bangConnection:Disconnect()
-                          bangConnection = nil
-                      end
-                      return
-                  end
-
-                  local localHumanoidRootPart = player.Character:FindFirstChild("HumanoidRootPart")
-                  local targetHumanoidRootPart = targetPlayer.Character:FindFirstChild("HumanoidRootPart")
-
-                  if localHumanoidRootPart and targetHumanoidRootPart then
-                      -- Calculate the exact position 1.5 studs behind the target
-                      local targetCFrame = targetHumanoidRootPart.CFrame
-                      local behindCFrame = targetCFrame * CFrame.new(0, 0, 1.3)
-
-                      -- Set bot's CFrame to the calculated position with target's exact rotation
-                      localHumanoidRootPart.CFrame = behindCFrame
-                  end
-              end)
-          end
       end
   end
 end
@@ -2077,7 +1988,7 @@ local function blackhole(targetPlayer)
   local springVelocity = Vector3.new(0, 0, 0)
   
   -- Enhanced physics parameters with axis-specific tuning
-  local stiffness = Vector3.new(3, 8, 3)
+  local stiffness = Vector3.new(3, 3, 3)
   local damping = Vector3.new(0.8, 0.8, 0.8)
   local jumpBoost = 5
   local bounceFactor = 0.8
@@ -2086,7 +1997,10 @@ local function blackhole(targetPlayer)
   -- Store original gravity to restore later
   local originalGravity = game.Workspace.Gravity
   game.Workspace.Gravity = 0
-  humanoid.Sit = true
+
+  if humanoid then
+    humanoid:ChangeState(Enum.HumanoidStateType.Physics)
+  end
   
   local function findRoot()
       if targetPlayer and targetPlayer.Character then
@@ -2216,18 +2130,6 @@ end
 -- ;unblackhole
 local function unblackhole()
     blackholebool = false
-end
-
--- ;noodle
-
-
--- ;unnoodle
-local function unnoodle()
-  noodlebool = false
-  if noodleConnection then
-    noodleConnection:Disconnect()
-    noodleConnection = nil
-  end
 end
 
 -- ;elevator
@@ -2719,162 +2621,6 @@ local function orbitPlayer2(targetPlayer, speed, r)
   end)
 end
 
--- ;orbit3
-local function orbitPlayer3(targetPlayer, speed, r)
-  game.Workspace.Gravity = 0
-
-  if r == 0 then
-    r = 0.0001
-  end
-
-  local playerCharacter = player.Character
-  local playerHumanoidRootPart = playerCharacter and playerCharacter:FindFirstChild("HumanoidRootPart")
-
-  if not playerHumanoidRootPart then
-    return
-  end
-
-  local targetHumanoidRootPart = targetPlayer.Character and targetPlayer.Character:FindFirstChild("HumanoidRootPart")
-  if not targetHumanoidRootPart then
-    return
-  end
-
-  local rotation = indexcircle
-  local orbitConnection
-  orbitConnection = RunService.Heartbeat:Connect(function()
-  if not orbitbool3 or not targetPlayer or not targetPlayer.Character or not targetPlayer.Character:FindFirstChild("HumanoidRootPart") then
-    orbitConnection:Disconnect()
-    return
-  end
-
-  removeVelocity()
-  local newCFrame = CFrame.new(targetHumanoidRootPart.Position)
-  * CFrame.Angles(0, math.rad(rotation), 90) -- if you are bored try to mess with values
-  * CFrame.new(r, 0, 0)
-  playerHumanoidRootPart.CFrame = newCFrame
-  local lookAtCFrame = CFrame.new(playerHumanoidRootPart.Position, targetHumanoidRootPart.Position)
-  playerHumanoidRootPart.CFrame = lookAtCFrame
-  rotation = (rotation + speed) % 360
-  end)
-end
-
--- ;orbit4
-local function orbitPlayer4(targetPlayer, speed, r)
-  game.Workspace.Gravity = 0
-
-  if r == 0 then
-    r = 0.0001
-  end
-
-  local playerCharacter = player.Character
-  local playerHumanoidRootPart = playerCharacter and playerCharacter:FindFirstChild("HumanoidRootPart")
-
-  if not playerHumanoidRootPart then
-    return
-  end
-
-  local targetHumanoidRootPart = targetPlayer.Character and targetPlayer.Character:FindFirstChild("HumanoidRootPart")
-  if not targetHumanoidRootPart then
-    return
-  end
-
-  removeVelocity()
-  local rotation = indexcircle
-  local orbitConnection
-  orbitConnection = RunService.Heartbeat:Connect(function()
-  if not orbitbool4 or not targetPlayer or not targetPlayer.Character or not targetPlayer.Character:FindFirstChild("HumanoidRootPart") then
-    orbitConnection:Disconnect()
-    return
-  end
-
-  local newCFrame = CFrame.new(targetHumanoidRootPart.Position)
-  * CFrame.Angles(math.rad(rotation),0, math.rad(rotation))
-  * CFrame.new(r, 0, 0)
-  playerHumanoidRootPart.CFrame = newCFrame
-  local lookAtCFrame = CFrame.new(playerHumanoidRootPart.Position, targetHumanoidRootPart.Position)
-  playerHumanoidRootPart.CFrame = lookAtCFrame
-  rotation = (rotation + speed) % 360
-  end)
-end
-
--- ;orbit5
-local function orbitPlayer5(targetPlayer, speed, r)
-  game.Workspace.Gravity = 0
-
-  if r == 0 then
-    r = 0.0001
-  end
-
-  local playerCharacter = player.Character
-  local playerHumanoidRootPart = playerCharacter and playerCharacter:FindFirstChild("HumanoidRootPart")
-
-  if not playerHumanoidRootPart then
-    return
-  end
-
-  local targetHumanoidRootPart = targetPlayer.Character and targetPlayer.Character:FindFirstChild("HumanoidRootPart")
-  if not targetHumanoidRootPart then
-    return
-  end
-
-  local rotation = indexcircle
-  local orbitConnection
-  orbitConnection = RunService.Heartbeat:Connect(function()
-  if not orbitbool5 or not targetPlayer or not targetPlayer.Character or not targetPlayer.Character:FindFirstChild("HumanoidRootPart") then
-    orbitConnection:Disconnect()
-    return
-  end
-
-  removeVelocity()
-  local newCFrame = CFrame.new(targetHumanoidRootPart.Position)
-  * CFrame.Angles(math.rad(math.random(0, 360)), math.rad(math.random(0, 360)), math.rad(math.random(0, 360)))
-  * CFrame.new(r, 0, 0)
-  playerHumanoidRootPart.CFrame = newCFrame
-  local lookAtCFrame = CFrame.new(playerHumanoidRootPart.Position, targetHumanoidRootPart.Position)
-  playerHumanoidRootPart.CFrame = lookAtCFrame
-  rotation = (rotation + speed) % 360
-  end)
-end
-
--- ;orbit6
-local function orbitPlayer6(targetPlayer, speed, r)
-  game.Workspace.Gravity = 0
-
-  if r == 0 then
-    r = 0.0001
-  end
-
-  local playerCharacter = player.Character
-  local playerHumanoidRootPart = playerCharacter and playerCharacter:FindFirstChild("HumanoidRootPart")
-
-  if not playerHumanoidRootPart then
-    return
-  end
-
-  local targetHumanoidRootPart = targetPlayer.Character and targetPlayer.Character:FindFirstChild("HumanoidRootPart")
-  if not targetHumanoidRootPart then
-    return
-  end
-
-  local rotation = indexcircle
-  local orbitConnection
-  orbitConnection = RunService.Heartbeat:Connect(function()
-  if not orbitbool6 or not targetPlayer or not targetPlayer.Character or not targetPlayer.Character:FindFirstChild("HumanoidRootPart") then
-    orbitConnection:Disconnect()
-    return
-  end
-
-  removeVelocity()
-  local newCFrame = CFrame.new(targetHumanoidRootPart.Position)
-  * CFrame.Angles(math.rad(math.random(0, 360)), math.rad(math.random(0, 360)), 0)
-  * CFrame.new(r, 0, 0)
-  playerHumanoidRootPart.CFrame = newCFrame
-  local lookAtCFrame = CFrame.new(playerHumanoidRootPart.Position, targetHumanoidRootPart.Position)
-  playerHumanoidRootPart.CFrame = lookAtCFrame
-  rotation = (rotation + speed) % 360
-  end)
-end
-
 -- ;stalk
 local function stalkPlayer(targetPlayer)
   if targetPlayer.Character and targetPlayer.Character:FindFirstChild("HumanoidRootPart") then
@@ -3016,11 +2762,7 @@ local function connectChatListener(playerpower)
             cmdcircle = false
             cmdchannel = false
             orbitbool = false
-            orbitbool5 = false
             orbitbool2 = false
-            orbitbool3 = false
-            orbitbool4 = false
-            orbitbool6 = false
             wormbool = false
             cmdworm = false
             cmdunworm = false
@@ -3031,10 +2773,6 @@ local function connectChatListener(playerpower)
             adminbool = false
             cmdarch = false
             cmdorbit2 = false
-            cmdorbit3 = false
-            cmdorbit4 = false
-            cmdorbit5 = false
-            cmdorbit6 = false
             cmdstalk = false
             stalkbool = false
             cmdunstalk = false
@@ -3084,10 +2822,6 @@ local function connectChatListener(playerpower)
             cmdlevitate = false
             cmdfloathead = false
             cmdshuffle = false
-            cmdtest = false
-            bangbool = false
-            cmdbang = false
-            cmdunbang = false
             cmdclear = false
             cmdhaunt = false
             cmdunhaunt = false
@@ -3095,9 +2829,6 @@ local function connectChatListener(playerpower)
             cmdblackhole = false
             cmdunblackhole = false
             blackholebool = false
-            cmdnoodle = false
-            cmdunnoodle = false
-            noodlebool = false
             Admins = {}
             adminNotConnected = {}
             chatMessage("Ended Script.")
@@ -3165,31 +2896,30 @@ local function connectChatListener(playerpower)
         chatMessage("/e dance")
         wait(2)
 
-      elseif command:sub(1, 7) == "dance 1" and table.find(bots, displayName) and cmddance then
+      elseif command:sub(1, 7) == "dance1" and table.find(bots, displayName) and cmddance then
         chatMessage("/e dance1")
         wait(2)
 
-      elseif command:sub(1, 7) == "dance 2" and table.find(bots, displayName) and cmddance then
+      elseif command:sub(1, 7) == "dance2" and table.find(bots, displayName) and cmddance then
         chatMessage("/e dance2")
         wait(2)
 
-      elseif command:sub(1, 7) == "dance 3" and table.find(bots, displayName) and cmddance then
+      elseif command:sub(1, 7) == "dance3" and table.find(bots, displayName) and cmddance then
         chatMessage("/e dance3")
         wait(2)
 
-      elseif command:sub(1, 7) == "dance 4" and table.find(bots, displayName) and cmddance then
-        chatMessage("/e dance 4")
+      elseif command:sub(1, 7) == "dance4" and table.find(bots, displayName) and cmddance then
+        chatMessage("/e dance4")
         wait(2)
       
       elseif command:sub(1, 5) == "cmds" and table.find(bots, displayName) and cmdcmds then
         if index == 1 then
             chatMessage(";status ;index ;follow [plr] ;quit ;dance <number> ;undance ;reset ;jump ;say <sentence> ;unfollow ;orbit [plr] <radius> <speed>")
-            chatMessage(";orbit2 [plr] <radius> <speed> ;orbit3 [plr] <radius> <speed> ;orbit4 [plr] <radius> <speed> ;orbit5 [plr] <radius> <speed>")
-            chatMessage(";orbit6 [plr] <radius> <speed> ;unorbit ;goto [plr] ;ws <number> ;loopjump ;unloopjump ;circle <number> ;channel <number>")
+            chatMessage(";orbit2 [plr] <radius> <speed> ;unorbit ;goto [plr] ;ws <number> ;loopjump ;unloopjump ;circle <number> ;channel <number>")
             chatMessage(";worm [plr] ;unworm ;spin <number> ;unspin ;admin [plr] ;arch <number> ;stalk [plr] ;unstalk ;cmds ;firework")
             chatMessage(";elevator [plr] ;gojo [plr] ;explode [plr] ;fling [plr] ;bridge [plr] ;nuke [plr] ;gravity <number> ;sit ;unsit")
-            chatMessage(";ladder (plr) ;ragdoll ;unragdoll ;sword [plr] <distance> ;unsword ;shotgun [plr] <distance> ;smite (plr) ;quake (plr)")
-            chatMessage(";walkfling ;unwalkfling ;trampoline (plr) ;clear ;shuffle ;floathead ;levitate")
+            chatMessage(";ladder [plr] ;ragdoll ;unragdoll ;sword [plr] <distance> ;unsword ;shotgun [plr] <distance> ;smite [plr] ;quake [plr]")
+            chatMessage(";walkfling ;unwalkfling ;trampoline [plr] ;clear ;shuffle ;floathead ;levitate ;haunt [plr] ;blackhole [plr]")
         end
         wait(2)
 
@@ -3316,31 +3046,6 @@ local function connectChatListener(playerpower)
         blackholebool = false
         if index == channel then
             chatMessage("Stopped blackhole effect")
-        end
-        wait(2)
-
-      elseif command:sub(1, 6) == "noodle" and table.find(bots, displayName) and cmdnoodle then
-        disablebool()
-        local playerName = command:sub(8)
-        local targetPlayer = findPlayerByName(playerName)
-    
-        if targetPlayer then
-            if index == channel then
-                chatMessage("Bots are now noodling towards " .. targetPlayer.Name)
-            end
-            noodle(targetPlayer)
-            wait(2)
-        else
-            if index == channel then
-                chatMessage("Player not found for noodling.")
-            end
-        end
-        wait(2)
-
-      elseif command == "unnoodle" and table.find(bots, displayName) and cmdunnoodle then
-        unnoodle()
-        if index == channel then
-            chatMessage("Stopped noodling effect")
         end
         wait(2)
 
@@ -3565,31 +3270,6 @@ local function connectChatListener(playerpower)
         end
         wait(2)
 
-      elseif command == "test" and table.find(bots, displayName) and cmdtest then
-        test()
-        if index == channel then
-            chatMessage("Bots are now shuffling")
-        end
-        wait(2)
-
-      elseif command:sub(1, 4) == "bang" and table.find(bots, displayName) and cmdbang then
-        disablebool()
-        local args = command:sub(6):split(" ")
-        local targetName = args[1]
-    
-        local targetPlayer = findPlayerByName(targetName)
-        if targetPlayer then
-            if index == channel then
-                chatMessage("Bots are now banging towards " .. targetPlayer.Name)
-            end
-            bang(targetPlayer)
-            wait(2)
-        else
-            if index == channel then
-                chatMessage("Player not found for banging.")
-            end
-        end
-
       elseif command:sub(1, 6) == "ladder" and table.find(bots, displayName) and cmdladder then
         disablebool()
         local playerName = command:sub(8)
@@ -3738,102 +3418,6 @@ local function connectChatListener(playerpower)
             chatMessage("Bots are now orbiting " .. targetPlayer.Name)
           end
           orbitPlayer2(targetPlayer, speed, r)
-
-          wait(2)
-        else
-          if index == channel then
-            chatMessage("Player not found: " .. playerName)
-          end
-        end
-
-    elseif command:sub(1, 7) == "orbit3 " and table.find(bots, displayName) and cmdorbit3 then
-      disablebool()
-        orbitbool3 = false
-        local args = command:split(" ")
-        local playerName = args[2]
-        local r = tonumber(args[3])
-        local speed = tonumber(args[4])
-
-        local targetPlayer = findPlayerByName(playerName)
-        if targetPlayer then
-          orbitbool3 = true
-
-          if index == channel then
-            chatMessage("Bots are now orbiting " .. targetPlayer.Name)
-          end
-          orbitPlayer3(targetPlayer, speed, r)
-
-          wait(2)
-        else
-          if index == channel then
-            chatMessage("Player not found: " .. playerName)
-          end
-        end
-    elseif command:sub(1, 7) == "orbit4 " and table.find(bots, displayName) and cmdorbit4 then
-      disablebool()
-        orbitbool4 = false
-        local args = command:split(" ")
-        local playerName = args[2]
-        local r = tonumber(args[3])
-        local speed = tonumber(args[4])
-
-        local targetPlayer = findPlayerByName(playerName)
-        if targetPlayer then
-          orbitbool4 = true
-
-          if index == channel then
-            chatMessage("Bots are now orbiting " .. targetPlayer.Name)
-          end
-          orbitPlayer4(targetPlayer, speed, r)
-
-          wait(2)
-        else
-          if index == channel then
-            chatMessage("Player not found: " .. playerName)
-          end
-        end
-
-    elseif command:sub(1, 7) == "orbit6 " and table.find(bots, displayName) and cmdorbit6 then
-      disablebool()
-        orbitbool6 = false
-        local args = command:split(" ")
-        local playerName = args[2]
-        local r = tonumber(args[3])
-        local speed = tonumber(args[4])
-
-        local targetPlayer = findPlayerByName(playerName)
-        if targetPlayer then
-          orbitbool6 = true 
-
-          if index == channel then
-            chatMessage("Bots are now orbiting " .. targetPlayer.Name)
-          end
-          orbitPlayer6(targetPlayer, speed, r)
-
-          wait(2)
-        else
-          if index == channel then
-            chatMessage("Player not found: " .. playerName)
-          end
-        end
-
-    elseif command:sub(1, 7) == "orbit5 " and table.find(bots, displayName) and cmdorbit5 then
-      disablebool()
-        orbitbool5 = false
-        local args = command:split(" ")
-        local playerName = args[2]
-        local r = tonumber(args[3])
-        local speed = tonumber(args[4])
-
-        local targetPlayer = findPlayerByName(playerName)
-        if targetPlayer then
-          orbitbool5 = true
-
-          if index == channel then
-            chatMessage("Bots are now orbiting " .. targetPlayer.Name)
-          end
-
-          orbitPlayer5(targetPlayer, speed, r)
 
           wait(2)
         else
